# Stellaris

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
src/section/: CMakeLists.txt
src/section/research/: CMakeLists.txt  ResearchCategory.cpp  ResearchCategory.h  ResearchTier.cpp  ResearchTier.h
src/shared/: CMakeLists.txt  LogicOperators.cpp  LogicOperators.h  Modifier.cpp  Modifier.h  ScriptedVariables.cpp  ScriptedVariables.h  WeightModifier.cpp  WeightModifier.h
src/util/: CMakeLists.txt  FileReader.cpp  FileReader.h  StellarisKey.cpp
test/: config.h.in  test.cpp
test/resources/common/scripted_variables/: 00_scripted_variables.txt  01_scripted_variables.txt
test/section/research/: ResearchCategory.cpp  ResearchTier.cpp
test/section/research/resources/: ResearchCategory.txt  ResearchItem.txt  ResearchItemEmpty.txt
test/shared/: LogicOperators.cpp  ScriptedVariables.cpp
test/shared/resources/: LogicOperator.txt  LogicOperatorDeep.txt
test/util/: FileReader.cpp  config.h.in
test/util/resources/: BasicFile.txt  DeepFile.txt  IgnoredLines.txt
